--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.18.1",
@@ -52,5 +52,5 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0"
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "https://localhost:3001"
 }
