--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.4",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.18.1",
     "react": "^17.0.1",
@@ -51,6 +52,5 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0"
-  },
-  "proxy": "https://localhost:3001"
+  }
 }
